Layout Page added

--- a/WebGentle BookStore/WebGentle BookStore/Views/Home/AboutUs.cshtml
+++ b/WebGentle BookStore/WebGentle BookStore/Views/Home/AboutUs.cshtml
@@ -1,17 +1,8 @@
 ﻿
 @{
-    Layout = null;
+    Layout = "_Layout";
 }
 
-<!DOCTYPE html>
-
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>AboutUs</title>
-</head>
-<body>
     <h3>Hello</h3>
     <p>This is a website for book selling. Thanks for visiting</p>
-</body>
-</html>
+
