View start added

--- a/WebGentle BookStore/WebGentle BookStore/Views/Shared/_Layout.cshtml
+++ b/WebGentle BookStore/WebGentle BookStore/Views/Shared/_Layout.cshtml
@@ -46,15 +46,24 @@
             </div>
         </nav>
     </header>
+
+    @RenderSection("breadcrumb", required: false)
+
+
+
     <main role="main">
         @RenderBody()
     </main>
-    <div>
-        <footer class="bordder-top card-footer text-muted text-center">
-            <div class="container">
-                Copyright &copy; Bookstore @DateTime.Now.Year
-            </div>
-        </footer>
-    </div>
+    <footer class="border-top footer text-muted text-center">
+        <div class="container">
+            Copyright  &copy; Book Store @DateTime.Now.Year
+        </div>
+    </footer>
+
+    <script src="~/lib/jquery/jquery.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+
+    @RenderSection("scripts", required: false)
 </body>
 </html>
