--- a/WebGentle BookStore/WebGentle BookStore/Views/Book/GetAllBooks.cshtml
+++ b/WebGentle BookStore/WebGentle BookStore/Views/Book/GetAllBooks.cshtml
@@ -1,9 +1,5 @@
 ﻿@model IEnumerable<WebGentle_BookStore.Models.BookModel>
 
-@{
-    Layout = "_Layout";
-}
-
  
     <div class="container">
         <h3 class="display-4">All Books</h3>
@@ -19,7 +15,7 @@
                             <p class="card-text"> @book.Description</p>
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
-                                    <a href="#" class="btn btn-sm btn-outline-secondary">View Details</a>
+                                    <a href="/Book/GetBook/@book.Id" class="btn btn-sm btn-outline-secondary">View Details</a>
                                 </div>
                                 <small class="text-muted">@book.AuthorName</small>
                             </div>
