--- a/WebGentle BookStore/WebGentle BookStore/Views/Home/Index.cshtml
+++ b/WebGentle BookStore/WebGentle BookStore/Views/Home/Index.cshtml
@@ -1,15 +1,17 @@
 ﻿
 
-<section class="jumbotron text-center">
-    <div class="container">
-        <h1>Welcome to bookstore</h1>
-        <p class="lead text-muted">
-            Hello there, <br />
-            This is a bookstore webapplication. I am extremly glad to see you. Thanks for visiting here.
-        </p>
-        <p>
-            <a href="#" class="btn btn-primary">Search Books</a>
-        </p>
+<section class="container">
+    <div class="jumbotron text-center">
+        <div class="container">
+            <h1>Welcome to bookstore</h1>
+            <p class="lead text-muted">
+                Hello there, <br />
+                This is a bookstore webapplication. I am extremly glad to see you. Thanks for visiting here.
+            </p>
+            <p>
+                <a href="#" class="btn btn-primary">Search Books</a>
+            </p>
+        </div>
     </div>
 </section>
 
