view data added

--- a/WebGentle BookStore/WebGentle BookStore/Views/Home/AboutUs.cshtml
+++ b/WebGentle BookStore/WebGentle BookStore/Views/Home/AboutUs.cshtml
@@ -1,6 +1,8 @@
 ﻿
+@{
+    ViewData["Title"] = "About Us";
+}
 
-
-    <h3>Hello</h3>
-    <p>This is a website for book selling. Thanks for visiting</p>
+<h3>Hello</h3>
+<p>This is a website for book selling. Thanks for visiting</p>
 
