--- a/WebGentle BookStore/WebGentle BookStore/Views/Shared/_Layout.cshtml
+++ b/WebGentle BookStore/WebGentle BookStore/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>Home</title>
+    <title>@ViewData["Title"] | Online Book Store </title>
     <link href="~/lib/twitter-bootstrap/css/bootstrap.css" rel="stylesheet" />
     <link href="~/css/Site.css" rel="stylesheet" />
 
