--- a/WebGentle BookStore/WebGentle BookStore/Views/Book/GetAllBooks.cshtml
+++ b/WebGentle BookStore/WebGentle BookStore/Views/Book/GetAllBooks.cshtml
@@ -1,32 +1,34 @@
-﻿
+﻿@{
+    ViewData["Title"] = "All Books";
+}
 
- 
-    <div class="container">
-        <h3 class="display-4">All Books</h3>
-        <div class="row">
 
-            @foreach (var book in Model)
-            {
-                <div class="col-md-4">
-                    <div class="card mb-4 shadow-sm">
-                        <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-                        <div class="card-body">
-                            <h3 class="card-title">@book.BookName</h3>
-                            <p class="card-text"> @book.Description</p>
-                            <div class="d-flex justify-content-between align-items-center">
-                                <div class="btn-group">
-                                    <a href="/Book/GetBook/@book.Id" class="btn btn-sm btn-outline-secondary">View Details</a>
-                                </div>
-                                <small class="text-muted">@book.AuthorName</small>
+<div class="container">
+    <h3 class="display-4">All Books</h3>
+    <div class="row">
+
+        @foreach (var book in Model)
+        {
+            <div class="col-md-4">
+                <div class="card mb-4 shadow-sm">
+                    <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
+                    <div class="card-body">
+                        <h3 class="card-title">@book.BookName</h3>
+                        <p class="card-text"> @book.Description</p>
+                        <div class="d-flex justify-content-between align-items-center">
+                            <div class="btn-group">
+                                <a href="/Book/GetBook/@book.Id" class="btn btn-sm btn-outline-secondary">View Details</a>
                             </div>
+                            <small class="text-muted">@book.AuthorName</small>
                         </div>
                     </div>
                 </div>
-            }
             </div>
-            
-
+        }
     </div>
+
+
+</div>
 
 
 
