--- a/WebGentle BookStore/WebGentle BookStore/Views/Book/GetBook.cshtml
+++ b/WebGentle BookStore/WebGentle BookStore/Views/Book/GetBook.cshtml
@@ -1,4 +1,6 @@
-﻿
+﻿@{
+    ViewData["Title"] = "Deatails About " + Model.BookName;
+}
 @model BookModel
 
 
@@ -74,5 +76,5 @@
         </div>
     </div>
 
-    
+
 </div>
