Tag helper , Environment Tag helper added

--- a/WebGentle BookStore/WebGentle BookStore/Views/Book/GetBook.cshtml
+++ b/WebGentle BookStore/WebGentle BookStore/Views/Book/GetBook.cshtml
@@ -75,6 +75,8 @@
             </ul>
         </div>
     </div>
-
+    <div class="similarBook" id="similarBook">
+        <h2>Similar Book Is here</h2>
+    </div>
 
 </div>
