--- a/WebGentle BookStore/WebGentle BookStore/Views/Shared/_Layout.cshtml
+++ b/WebGentle BookStore/WebGentle BookStore/Views/Shared/_Layout.cshtml
@@ -29,16 +29,16 @@
                     </ul>
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" href="/">Home</a>
+                            <a class="nav-link text-dark" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" href="/home/aboutus">About</a>
+                            <a class="nav-link text-dark" asp-controller="Home" asp-action="AboutUs">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" href="/home/contractus">Contact</a>
+                            <a class="nav-link text-dark" asp-controller="Home" asp-action="ContractUs">Contact</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" href="/Book/GetAllBooks">All Books</a>
+                            <a class="nav-link text-dark" asp-controller="Book" asp-action="GetAllBooks">All Books</a>
 
                         </li>
                     </ul>
