--- a/WebGentle BookStore/WebGentle BookStore/Views/Book/GetAllBooks.cshtml
+++ b/WebGentle BookStore/WebGentle BookStore/Views/Book/GetAllBooks.cshtml
@@ -17,7 +17,7 @@
                         <p class="card-text"> @book.Description</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
-                                <a href="/Book/GetBook/@book.Id" class="btn btn-sm btn-outline-secondary">View Details</a>
+                                <a asp-controller="Book" asp-action="GetBook" asp-route-id=@book.Id asp-fragment="similarBook" class="btn btn-sm btn-outline-secondary">View Details</a>
                             </div>
                             <small class="text-muted">@book.AuthorName</small>
                         </div>
