Connecting with MySQL Database Using EF

--- a/WebGentle BookStore/WebGentle BookStore/Views/Shared/_Layout.cshtml
+++ b/WebGentle BookStore/WebGentle BookStore/Views/Shared/_Layout.cshtml
@@ -41,6 +41,11 @@
                             <a class="nav-link text-dark" asp-controller="Book" asp-action="GetAllBooks">All Books</a>
 
                         </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-controller="Book" asp-action="AddBook">Add Book</a>
+
+                        </li>
                     </ul>
                 </div>
             </div>
