--- a/WebGentle BookStore/WebGentle BookStore/Views/Book/AddBook.cshtml
+++ b/WebGentle BookStore/WebGentle BookStore/Views/Book/AddBook.cshtml
@@ -5,6 +5,21 @@
 
 <div class="container">
     <h3 class="display-4">Add New Book</h3>
+    <hr />
+    @if (ViewBag.IsSuccess)
+    {
+        <div class="alert alert-success alert-dismissible fade show" role="alert">
+            <strong>Congratulation!</strong> You Added New Book Successfully.
+            Click <a asp-controller="Book" asp-action="GetBook" asp-route-id="@ViewBag.Bookid">here</a> to view this book.
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+
+    }
+
+
+
     <form method="post" asp-action="AddBook">
         <div class="form-group">
             <label asp-for="BookName">Book Name</label>
@@ -20,20 +35,14 @@
             <label asp-for="Description">Description</label>
             <textarea asp-for="Description" class="form-control"> </textarea>
         </div>
-        <div class="form-group">
-            <label asp-for="Catagory">Catagory</label>
-            <input asp-for="Catagory" class="form-control" />
-        </div>
+
 
         <div class="form-group">
             <label asp-for="TotalPages">Total Pages</label>
             <input asp-for="TotalPages" class="form-control" />
         </div>
 
-        <div class="form-group">
-            <label asp-for="Languages">Total Pages</label>
-            <input asp-for="Languages" class="form-control" />
-        </div>
+
 
         <div class="form-group">
             <input type="submit" value="Add Book" class="btn btn-primary" />
